# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.416 2008/06/20 14:41:05 armin76 Exp $

  20 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0-r1.ebuild:
  Re-fix bug #228005

*mozilla-firefox-3.0-r1 (20 Jun 2008)

  20 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0.ebuild, +mozilla-firefox-3.0-r1.ebuild:
  Don't use external sqlite, since it seems to give some problems, bug
  #228305, and fix bindist icon, bug #228317

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org> mozilla-firefox-3.0.ebuild:
  Bump patchset to fix bug #219444

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  files/gentoo-default-prefs.js, mozilla-firefox-3.0.ebuild:
  Fix nss dep, remove EULA stuff

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org> mozilla-firefox-3.0.ebuild:
  Bump patchset to fix bug #228005

*mozilla-firefox-3.0 (17 Jun 2008)

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_rc3.ebuild, +mozilla-firefox-3.0.ebuild:
  Version bump, wrt #227853, remove old

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_rc3.ebuild:
  Add missing dep on pkg-config

*mozilla-firefox-3.0_rc3 (12 Jun 2008)

  12 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_rc1-r1.ebuild, -mozilla-firefox-3.0_rc2.ebuild,
  +mozilla-firefox-3.0_rc3.ebuild:
  Version bump, remove old

*mozilla-firefox-3.0_rc2 (05 Jun 2008)

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-3.0_rc2.ebuild:
  Version bump

*mozilla-firefox-3.0_rc1-r1 (21 May 2008)

  21 May 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_beta5-r4.ebuild, -mozilla-firefox-3.0_rc1.ebuild,
  +mozilla-firefox-3.0_rc1-r1.ebuild:
  Revision bump to try to fix the wrapper thing, remove old

  20 May 2008; Raúl Porcel <armin76@gentoo.org>