@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.416 2008/06/20 14:41:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.417 2008/06/21 19:34:53 armin76 Exp $
+
+  21 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  mozilla-firefox-3.0-r1.ebuild:
+  Add iceweasel branding, to make rbu happy
 
   20 Jun 2008; Raúl Porcel <armin76@gentoo.org>
   mozilla-firefox-3.0-r1.ebuild:
